<resources>
    <string name="app_name">AirportShopper</string>
    <string name="action_settings">Settings</string>
    <string name="saved">%%DD collected Airmarks</string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string name="searching">Searching for Air Displays</string>
    <string name="btn_continue">Continue ></string>
    <string name="app_name_big">AirportShopper</string>

    <string name="welcome">Welcome to AirportShopper</string>
    <string name="welcome_txt">AirportShopper is a shopping cart for airports that lets you save interesting products for later</string>
    <string name="how">How to use AirportShopper</string>
    <string name="how_txt">When in front of an Air Display your phone turns into a remote control for products you see on screen. Simply swipe left to ignore and right to keep an airmark for later.</string>
    <string name="how_p">How to purchase with \n AirportShopper</string>
    <string name="how_p_txt">During your flight AirportShopper lets you review and compare products. When you order an hour ahead of arrival your purchase is delivered right to the gate.</string>
    <string name="ready">Ready to AirportShopper?</string>

    <string name="collected">Collected Airmarks</string>
    <string name="basket">Basket of Interest</string>
    <string name="my_flight">My Flights</string>
    <string name="settings">AirportShopper Settings</string>
    <string name="logout">Logout</string>
    <string name="select_flight">Select your flight</string>
    <string name="ams">AMS Departures</string>
</resources>
