<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--Title Bar-->
    <RelativeLayout
        android:id="@+id/layout_titlebar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@color/white">
        <ImageView
            android:id="@+id/img_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/airportshopper_burger_menue_black"
            android:onClick="onMenu"/>
        <ImageView
            android:id="@+id/img_flug"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/airportshopper_black"/>
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/img_menu"
            android:layout_toLeftOf="@id/img_flug"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="@color/text_black"/>
    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/background">
            <!--Saved in bookmark-->
            <TextView
                android:id="@+id/saved_bookmark"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/saved"/>

            <RelativeLayout
                android:id="@+id/layout_products"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/saved_bookmark"
                android:layout_margin="30dp"
                android:background="@color/white">
                <TextView
                    android:id="@+id/product_name"
                    android:layout_alignParentTop="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="24sp"
                    android:textColor="@color/text_black"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"/>
                <ImageView
                    android:id="@+id/product_img"
                    android:layout_below="@id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:gravity="center"
                    android:layout_marginTop="20dp"/>
                <TextView
                    android:id="@+id/product_info"
                    android:layout_below="@id/product_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:textSize="18sp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/text_black"
                    android:layout_marginTop="20dp"/>
                <View
                    android:id="@+id/product_color"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/product_info"/>

                <LinearLayout
                    android:id="@+id/layout_btns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentBottom="true">
                    <!--Skip or Save-->
                    <Button
                        android:id="@+id/btn_skip"
                        android:background="@color/red"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:text="@string/skip"
                        android:onClick="onSkipProduct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_weight="1"/>
                    <Button
                        android:id="@+id/btn_save"
                        android:background="@color/green"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:text="@string/save"
                        android:onClick="onSaveProduct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_weight="1"/>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_waiting_beaconsignal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_above="@id/saved_bookmark"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/airportshopper_wifi_search2"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:text="@string/searching"/>
            </LinearLayout>
        </RelativeLayout>
        <!--layout menus-->
        <LinearLayout
            android:id="@+id/layout_menus"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="gone">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textColor="@color/text_black"
                android:textSize="22sp"
                android:text="@string/collected"
                android:onClick="onCollected"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textColor="@color/text_black"
                android:textSize="22sp"
                android:text="@string/basket"
                android:onClick="onBasket"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textColor="@color/text_black"
                android:textSize="22sp"
                android:text="@string/my_flight"
                android:onClick="onMyFlight"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textColor="@color/text_black"
                android:textSize="22sp"
                android:text="@string/settings"
                android:onClick="onSettings"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textColor="@color/text_black"
                android:textSize="22sp"
                android:text="@string/logout"
                android:onClick="onLogout"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>

